# Split_and_Merge

./: .env.example  .gitignore  README.md  docker-compose.yml  dockerfile  pyproject.toml
src/: main.py
